Add local changes

--- a/docs/paper/main.tex
+++ b/docs/paper/main.tex
@@ -9,6 +9,7 @@
 \usepackage{algorithmic}
 \usepackage{multirow}
 \usepackage{enumitem}
+\usepackage{mathtools}
 
 \title{Topological Regularization for Molecular Generative Models}
 \author{First Author\\Institution\\\texttt{email@example.com} \and Second Author\\Institution\\\texttt{email2@example.com}}
