Enhance torus persistence workflow and add playground dataset

--- a/docs/paper/main.tex
+++ b/docs/paper/main.tex
@@ -131,7 +131,7 @@ We evaluate the topological loss every $N$ minibatches to amortize the cost of p
 Our VAE operates on centered and aligned 3D coordinates or dihedral representations of molecules. Given an input $X \in (\mathbb{R}^3)^n$, we first apply $T(X)$ to remove translation and rotation via Procrustes alignment so that the network focuses on shape rather than absolute placement in space. The encoder comprises multi-layer perceptrons with residual connections that map invariants such as pairwise distances $D_{ij} = \|x_i - x_j\|_2$ and dihedral embeddings $(\sin \theta_k, \cos \theta_k)$ to an 8--10 dimensional latent space. The decoder mirrors this structure and outputs reconstructed coordinates $\hat{X} = g_\theta(z)$, followed by post-processing to enforce SE(3) invariance through re-centering and alignment. We incorporate equivariant features to stabilize training while retaining differentiability of the pipeline.
 
 \subsection{Persistence Diagram Computation}
-We compute Vietoris--Rips filtrations on batches of atomic coordinates using the GUDHI library. For a batch $\{X_b\}_{b=1}^B$, we form distance matrices $\Delta^{(b)}_{ij} = \| (T(X_b))_i - (T(X_b))_j \|_2$ and restrict edges to $\Delta^{(b)}_{ij} \leq r_{\max} = 15~\text{\AA}$ to reduce combinatorial complexity. The resulting complexes yield $H_0$ and $H_1$ diagrams; we retain birth--death pairs whose persistence exceeds a threshold $\tau$ to mitigate numerical noise. Batched computations leverage parallel processing across conformations, and diagram data structures are cached to amortize costs across training iterations.
+We compute Vietoris--Rips filtrations on batches of atomic coordinates using the GUDHI library. For a batch $\{X_b\}_{b=1}^B$, we form distance matrices $\Delta^{(b)}_{ij} = \| (T(X_b))_i - (T(X_b))_j \|_2$ and restrict edges to $\Delta^{(b)}_{ij} \leq r_{\max} = 15~\text{\AA}$ to reduce combinatorial complexity. When working directly in internal coordinates $\theta \in \mathbb{T}^m$ we map each angle to a sine--cosine embedding $\Phi(\theta) = [\cos k\theta, \sin k\theta]_{k=1}^H$ before constructing Euclidean filtrations. This torus embedding linearises periodic boundaries and dramatically improves the stability of $H_1$ detection relative to wrapped geodesic distances on sparse Ramachandran samples. The resulting complexes yield $H_0$ and $H_1$ diagrams; we retain birth--death pairs whose persistence exceeds a threshold $\tau$ to mitigate numerical noise. Batched computations leverage parallel processing across conformations, and diagram data structures are cached to amortize costs across training iterations.
 
 \subsection{Experimental Setup}
 Our evaluation centers on a cyclic hexapeptide (cyclo-Ala$_6$) simulated with AMBER99SB force fields in implicit solvent. Replica exchange molecular dynamics with five replicas of 10~ns each yields 5{,}000 conformations spanning the energy landscape. We partition the dataset into 70\% training, 15\% validation, and 15\% testing splits. Baselines include a standard VAE and a $\beta$-VAE with elevated regularization weight. Evaluation metrics encompass
